tests/machine/x/st/math_ops.st
Transcript show: ((6 * 7)) printString; cr.
Transcript show: ((7 / 2)) printString; cr.
Transcript show: ((7 % 2)) printString; cr.
